PWA-ready index.html

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -149,7 +149,7 @@ window.addEventListener("DOMContentLoaded", () => {
   const previewDiv = document.getElementById("plannerPreview");
   previewDiv.innerHTML = todayWorkout
     ? `<p>${todayWorkout.workout}</p>`
-    : `<p class="planner-empty">No workout planned for today</p>`;
+    : `<p class="planner-empty">No workout plannedd for today</p>`;
 });
 </script>
 
