PWA-ready index.html

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -68,8 +68,14 @@
           Show more →
         </button>
       </div>
-      <div id="plannerPreview" class="planner-preview">
-        <p class="planner-empty">No workout planned for today</p>
+      <div class="planner-stack">
+  <div class="planner-preview">
+    <p class="planner-empty">No workout planned for today</p>
+  </div>
+
+  <button class="show-more">Show more</button>
+</div>
+
       </div>
     </div>
 
