PWA-ready index.html

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -61,26 +61,27 @@
     </div>
 
     <!-- Planner Preview Card -->
-    <div class="card planner-card">
-      <div class="planner-header">
-        <h3>Planner</h3>
-        <button class="planner-link" onclick="location.href='planner.html'">
-          Show more →
-        </button>
-      </div>
-      <div class="planner-stack">
-  <div class="planner-preview">
-    <p class="planner-empty">No workout planned for today</p>
+<div class="card planner-card">
+
+  <div class="planner-header">
+    <h3>Planner</h3>
   </div>
 
-  <button class="show-more">Show more</button>
-</div>
-
-      </div>
+  <div class="planner-stack">
+    <div class="planner-preview" id="plannerPreview">
+      <p class="planner-empty">No workout planned for today</p>
     </div>
 
+    <button
+      class="planner-link"
+      onclick="location.href='planner.html'"
+    >
+      Show more →
+    </button>
   </div>
+
 </div>
+
 
 <!-- BOTTOM NAVIGATION -->
 <nav class="bottom-nav">
